--- a/index.html
+++ b/index.html
@@ -6,18 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="js/login.js"></script>
-    <title>Momentum</title>
+    <title>Document</title>
   </head>
   <body>
-    <form class="login-form hidden">
+    <form class="login-form">
       <input
         required
-        max="15"
+        maxlength="15"
         type="text"
-        placeholder="Hello, What's your name?"
+        placeholder="What is your name?"
+        class="login-input"
       />
       <button>Log In</button>
     </form>
-    <h1 class="greeting hidden"></h1>
+    <h1 class="greeting"></h1>
   </body>
 </html>
