--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="js/login.js"></script>
-    <title>Document</title>
+    <title>Momentum</title>
   </head>
   <body>
     <form class="login-form">
